unused code is removed